@@ -22,6 +22,11 @@ fi
 # Run migrations
 ${ARTISAN} monica:update --force -v
 
+if [[ -n ${SENTRY_SUPPORT:-} && $SENTRY_SUPPORT ]]; then
+  release=$(cat .sentry-release)
+  ${ARTISAN} sentry:release --release=$release --commit=$release --environment=$SENTRY_ENV -v || true
+fi
+
 # Run cron
 crond -b &
 
